Spring-boot 3 upgrade in resources
Issue-ID: AAI-4099
Change-Id: I8bf22cd7a6d747b7e8cdcba12efcf547f6ccb390
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>